Changelog for DimensionDoor (v2.1.1-SNAPSHOT)

2012-08-01 01:00:36 +0100    clean up (James Richardson)
2012-08-01 00:56:26 +0100    enable using modify command from console (James Richardson)
2012-08-01 00:55:40 +0100    all commands updated (James Richardson)
2012-08-01 00:16:07 +0100    finished info command (James Richardson)
2012-07-31 23:42:48 +0100    implemented info command (James Richardson)
2012-07-31 23:25:58 +0100    added ClearCommand (James Richardson)
2012-07-31 23:20:51 +0100    remove old classes ready for refactoring (James Richardson)
2012-07-31 23:10:29 +0100    fix ListCommand (James Richardson)
2012-07-31 23:01:01 +0100    reimplement old commands (James Richardson)
2012-07-31 22:09:43 +0100    better end of command notification fixed NPE (James Richardson)
2012-07-31 22:05:17 +0100    add Conversation to create worlds - fully localisable - better error checking (James Richardson)
2012-07-31 20:06:21 +0100    update RemoveCommand (James Richardson)
2012-07-31 19:58:20 +0100    update LoadCommand (James Richardson)
2012-07-31 17:14:12 +0100    revert to setting fields directly (James Richardson)
2012-07-31 17:10:43 +0100    fix infinite loop (James Richardson)
2012-07-31 16:46:02 +0100    serialise correctly (James Richardson)
2012-07-31 16:41:16 +0100    using wrong constructor (James Richardson)
2012-07-31 16:36:26 +0100    add toString - add forgotten fields (James Richardson)
2012-07-31 15:44:41 +0100    add default configuration (James Richardson)
2012-07-31 15:37:27 +0100    comment out old commands (James Richardson)
2012-07-31 15:34:39 +0100    add documentation (James Richardson)
2012-07-31 15:15:43 +0100    added debugging (James Richardson)
2012-07-31 07:06:01 +0100    always allow players to enter the main world (James Richardson)
2012-07-31 06:45:41 +0100    mass cleanup (James Richardson)
2012-07-31 06:43:36 +0100    changed my mind and moved it into World (James Richardson)