@@ -1,11 +1,7 @@
 debugging: false
 automatic-updates:
   enabled: true
-  method: automatic
+  method: notify
   branch: stable
 creative-world-transfer-settings:
-  clear-action-bar: true
-  clear-item-in-hand: true
-creative-world-settings:
-  prevent-container-blocks: true
-  prevent-item-drops: true
+  clear-inventories: true
