@@ -1,5 +1,6 @@
 Changelog for DimensionDoor (v2.1.1-SNAPSHOT)
 
+2012-08-01 01:13:40 +0100    implement creative inventory clearing (James Richardson)
 2012-08-01 01:00:36 +0100    clean up (James Richardson)
 2012-08-01 00:56:26 +0100    enable using modify command from console (James Richardson)
 2012-08-01 00:55:40 +0100    all commands updated (James Richardson)
